# helios

./: .gitignore  CLAUDE.md  README.md  helios.toml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
helios/: README.md  anthropic-helios.py  anthropic_openai-helios.py  helios-ollama.py
legacy/: anthropic-helios.py  anthropic_openai-helios.py
src/helios/: __init__.py  __main__.py
src/helios/cli/: app.py
src/helios/cli/commands/: config.py  models.py  resume.py  run.py  serve.py  sessions.py  web.py
src/helios/config/: loader.py  schema.py
src/helios/core/: engine.py  events.py  models.py  session.py
src/helios/indexing/: __init__.py  api_extractor.py  chunker.py  claude_md_generator.py  crawler.py  dependencies.py  embeddings.py  scanner.py  stack_analyzer.py  store.py  watcher.py
src/helios/memory/: search.py  skills.py  store.py
src/helios/models/: hub.py
src/helios/providers/: base.py  groq.py  llama_cpp.py  ollama.py  openai_compatible.py  registry.py
src/helios/server/: __init__.py  __main__.py  app.py
src/helios/tools/: base.py  registry.py
src/helios/tools/builtin/: code_file.py  complete.py  decompose.py  project_structure.py  read_file.py  search.py  synthesis.py
src/helios/web/: api.py
src/helios/web/frontend/: app.js  index.html  style.css
tests/: conftest.py  test_api_extractor.py  test_claude_md_generator.py  test_engine.py  test_events.py  test_indexing.py  test_models.py  test_onboard.py  test_stack_analyzer.py
tests/test_memory/: test_skills.py  test_store.py
tests/test_providers/: test_providers.py
tests/test_tools/: test_builtin.py
